[gd_scene load_steps=25 format=3 uid="uid://by8113x2kbl31"]

[ext_resource type="Script" uid="uid://dwvouchfc2uh0" path="res://scenes/coletaveis/life.gd" id="1_cbq5o"]
[ext_resource type="Texture2D" uid="uid://bu8pd2g22dcsr" path="res://Assets/Coletaveis/heart-Sheet.png" id="1_ehy0e"]
[ext_resource type="Texture2D" uid="uid://otc2o3t86lyf" path="res://Assets/Efeitos_Particulas/Cloud_Poof (16 x 16).png" id="2_4wg4c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cbq5o"]
radius = 8.062258

[sub_resource type="AtlasTexture" id="AtlasTexture_p0c8u"]
atlas = ExtResource("2_4wg4c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0asq"]
atlas = ExtResource("2_4wg4c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lsaw"]
atlas = ExtResource("2_4wg4c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyxnl"]
atlas = ExtResource("2_4wg4c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5pk1"]
atlas = ExtResource("2_4wg4c")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cadgi"]
atlas = ExtResource("2_4wg4c")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmwb2"]
atlas = ExtResource("2_4wg4c")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43b1"]
atlas = ExtResource("2_4wg4c")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wg4c"]
atlas = ExtResource("1_ehy0e")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6cpx"]
atlas = ExtResource("1_ehy0e")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4877n"]
atlas = ExtResource("1_ehy0e")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl0ik"]
atlas = ExtResource("1_ehy0e")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhkut"]
atlas = ExtResource("1_ehy0e")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_knhvo"]
atlas = ExtResource("1_ehy0e")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xkjl"]
atlas = ExtResource("1_ehy0e")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta4cp"]
atlas = ExtResource("1_ehy0e")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaee7"]
atlas = ExtResource("1_ehy0e")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqwav"]
atlas = ExtResource("1_ehy0e")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc1lv"]
atlas = ExtResource("1_ehy0e")
region = Rect2(160, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p0c8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0c8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0asq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lsaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyxnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5pk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cadgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmwb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43b1")
}],
"loop": false,
"name": &"colect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wg4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6cpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4877n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl0ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhkut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knhvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xkjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta4cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaee7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqwav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc1lv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Life" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_cbq5o")

[node name="cllect_sound" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cbq5o")

[node name="Anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p0c8u")
animation = &"colect"
autoplay = "default"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
